[package]
name = "brute-force"
version = "0.1.1"
authors = ["Lee Bousfield <ljbousfield@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A library for brute forcing arbitrary computations"
repository = "https://github.com/PlasmaPower/brute-force"
documentation = "https://docs.rs/brute-force"

[dependencies]
crossbeam-channel = "0.5.0"
crossbeam-utils = "0.8.1"
curve25519-dalek = {  package = "curve25519-dalek-ng", version = "4.0.1", optional = true }
log = "0.4.14"
num_cpus = "1.13.0"
rand = { version = "0.8.1", optional = true }

[features]
nightly = []
curve25519 = ["curve25519-dalek", "rand"]

[dev-dependencies]
blake2 = "0.9.1"
hex = "0.4.2"

[package.metadata.docs.rs]
rustc-args = ["--features", "curve25519"]
